# seo-farm-orchestrator

./: .env.local  .worker_aliases  CHANGELOG_MULTI_PROVIDER.md  CHANGELOG_worker_cleanup_2025-08-02.md  DATABASE_SETUP.md  DEPLOYMENT_QUICK_START.md  FINAL_PRODUCTION_SETUP.md  Makefile  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_README.md  QUICK_START_GUIDE.md  README.md  REFACTOR_COMPLETE.md  SECURITY_CHECKLIST.md  ULTIMATE_DEPLOYMENT_STRATEGY.md  activity_wrappers.py  assistants_export.json  config.py  critical_debug.py  debug_backend_issue.py  debug_llm_coroutine.py  debug_test_runner.py  deployment_aliases.sh  encryption_key.txt  env_production_template.txt  fal_images_output.json  final_test.py  final_test_complete_flow.py  fixed_images_output.json  health_check.sh  local_env_setup.sh  logger.py  manage_worker.sh  master_worker_manager.sh  master_worker_manager_production.sh  package-lock.json  package.json  prisma_prod_schema.prisma  prod.env  production.env  (+34 more)
_archiv_workeri/: assistant_activities_2025-08-02.py  simple_worker_2025-08-02.py  worker_2025-08-02.py
activities/: assistant_activities.py  brief_assistant.py  content_humanizer.py  db_debug_assistant.py  draft_assistant.py  fact_validator_assistant.py  generate_llm_friendly_content.py  humanizer_assistant.py  inject_structured_markup.py  keyword_generator.py  multimedia_assistant.py  publish_activity.py  publish_assistant.py  publish_script.py  qa_assistant.py  research_assistant.py  safe_assistant_activities.py  save_output.py  save_output_to_json.py  seo_assistant.py
backend/: README.md  api_keys.json  encryption_key.txt  main.py  openai_client.py  pyproject.toml  run_dev.sh  temporal_client.py  test_retry_endpoint.py
backend/api/: __init__.py  database.py
backend/api/routes/: __init__.py  api_keys.py  assistant.py  project.py  workflow_run.py
backend/llm_clients/: __init__.py  base.py  claude_client.py  factory.py  gemini_client.py
backend/seo_farm_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
helpers/: db_activity_monitor.py  db_connection_audit.py  db_logger.py  transformers.py
monitoring/: alerting_rules.yml  docker-compose.monitoring.yml  prometheus.yml  prometheus_metrics.py
outputs/: seo_output_20250730_000634_assistan.json  seo_output_20250730_001115_assistan.json  seo_output_20250730_001413_assistan.json  seo_output_20250730_002816_assistan.json  seo_output_20250730_003606_assistan.json  (+81 more)
(+59 files in other folders)
